# cang-jie

./: .gitignore  .travis.yml  AGENTS.md  Cargo.toml  LICENSE  README.MD  README.md  pre-commit  prek.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: release.md
scripts/: check_release_semver.py
src/: lib.rs  options.rs  stream.rs  tokenizer.rs
tests/: baseline.rs  position.rs  token_offsets.rs  unicode_split.rs
