[package]
name = "cang-jie"
version = "0.17.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2021"
description = "A Chinese tokenizer for tantivy"
license = "MIT"
repository = "https://github.com/DCjanus/cang-jie"
readme = "README.MD"
keywords = ["search", "tokenizer", "Chinese", "tantivy"]

[dependencies]
tantivy = "0.21.1"
jieba-rs = { version = "0.6.8", default-features = false }
log = "0.4.20"

[dev-dependencies]
jieba-rs = { version = "0.6.8", default-features = true }
flexi_logger = "0.27.2"
