[package]
name = "cang-jie"
version = "0.18.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2021"
description = "A Chinese tokenizer for tantivy"
license = "MIT"
repository = "https://github.com/DCjanus/cang-jie"
readme = "README.MD"
keywords = ["search", "tokenizer", "Chinese", "tantivy"]

[dependencies]
tantivy = "0.22.0"
jieba-rs = { version = "0.7.0", default-features = false }
log = "0.4.22"

[dev-dependencies]
jieba-rs = { version = "0.7.0", default-features = true }
flexi_logger = "0.29.6"
