[package]
name = "cang-jie"
version = "0.20.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2024"
rust-version = "1.88"
description = "A Chinese tokenizer for tantivy"
license = "MIT"
repository = "https://github.com/DCjanus/cang-jie"
readme = "README.md"
keywords = ["search", "tokenizer", "Chinese", "tantivy"]

[dependencies]
jieba-rs = { version = "0.10.2", default-features = false }
log = "0.4.29"
tantivy = "0.26.1"

[dev-dependencies]
flexi_logger = "0.31.8"
jieba-rs = { version = "0.10.2", default-features = true }
